--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 B00_secret_SET_PASSWD.cmd
-AHK10_Automation-secret.ahk
+AHK10_Automation-secret_keys.ahk
+AHK10_Automation-secret_vars.ahk
+AHK10_Merged.ahk
